// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminSearchPageComponent should snap with a search key 1`] = `
<tm-admin-search-page
  accountRequests={[Function Array]}
  characterLimit={[Function Number]}
  instructors={[Function Array]}
  isRegeneratingInstructorKeys={[Function Array]}
  isRegeneratingStudentKeys={[Function Array]}
  loadingBarService={[Function LoadingBarService]}
  searchQuery={[Function String]}
  searchService={[Function SearchService]}
  searchString=""
  statusMessageService={[Function StatusMessageService]}
  students={[Function Array]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div
        class="input-group"
      >
        <input
          aria-label="Search"
          class="form-control ng-untouched ng-pristine ng-valid"
          id="search-box"
          maxlength="100"
          type="text"
        />
        <button
          class="btn btn-primary input-group-text"
          id="search-button"
        >
          Search
        </button>
      </div>
      <span>
        96 characters left
      </span>
    </div>
  </div>
</tm-admin-search-page>
`;

exports[`AdminSearchPageComponent should snap with default fields 1`] = `
<tm-admin-search-page
  accountRequests={[Function Array]}
  characterLimit={[Function Number]}
  instructors={[Function Array]}
  isRegeneratingInstructorKeys={[Function Array]}
  isRegeneratingStudentKeys={[Function Array]}
  loadingBarService={[Function LoadingBarService]}
  searchQuery=""
  searchService={[Function SearchService]}
  searchString=""
  statusMessageService={[Function StatusMessageService]}
  students={[Function Array]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div
        class="input-group"
      >
        <input
          aria-label="Search"
          class="form-control ng-untouched ng-pristine ng-valid"
          id="search-box"
          maxlength="100"
          type="text"
        />
        <button
          class="btn btn-primary input-group-text"
          id="search-button"
        >
          Search
        </button>
      </div>
      <span>
        100 characters left
      </span>
    </div>
  </div>
</tm-admin-search-page>
`;
